# Error-Code-Correction

./: .gitignore  AGENTS.md  BCHvsHamming.cpp  BitVector.hpp  CMakeLists.txt  CONTRIBUTING.md  Hamming32bit1Gb.cpp  Hamming64bit128Gb.cpp  Makefile  ParityCheckMatrix.hpp  Plot.py  PracticalSRAMSimulator.cpp  ProgressReport.txt  README.md  SAT.cpp  SECURITY.md  SecDaec64.hpp  VERSION  area_models.py  calibration.py  carbon.py  carbon_calib.json  carbon_defaults.json  carbon_model.py  ecc_mux.py  ecc_selector.py  eccsim.py  energy_model.py  esii.py  fit.py  gate_energy.hpp  gs.py  integrated_toolkit.py  mbu.py  mux_model.py  nand2_area.json  parse_telemetry.py  plot_pareto.py  polar.py  pytest.ini  (+12 more)
.github/: labels.yml
.github/workflows/: signoff-gate.yml
analysis/: __init__.py  archetype.py  generate_figures.py  hv.py  knee.py  pareto.py  plot_metadata.py  plot_pipeline.py  scenario_resolver.py  sensitivity.py  surface.py  tradeoff.py  workload_scenarios.py
asic/: README_ecc_wrappers.md
asic/bch/: bch_decoder.sv  bch_encoder.sv  sram_bch_top.sv
asic/common/: ecc_types_pkg.sv  sram_core.sv
asic/docs/: MODULE_MAP.md  README_asic.md
asic/include/: ecc_pkg.sv
asic/polar/: polar_decoder_128_96.sv  polar_decoder_64_32.sv  polar_decoder_64_48.sv  polar_encoder_128_96.sv  polar_encoder_64_32.sv  polar_encoder_64_48.sv  sram_polar_128_96_top.sv  sram_polar_64_32_top.sv  sram_polar_64_48_top.sv
asic/scripts/: compile.sh  filelist.f  regress.sh  run.sh
asic/secdaec/: secdaec_decoder.sv  secdaec_encoder.sv  sram_secdaec_top.sv
asic/secded/: secded_decoder.sv  secded_encoder.sv  sram_secded_top.sv
asic/taec/: sram_taec_top.sv  taec_decoder.sv  taec_encoder.sv
asic/tb/: tb_bch.sv  tb_polar.sv  tb_secdaec.sv  tb_secded.sv  tb_sram_wrappers.sv  tb_taec.sv
config/: signoff_thresholds.json
configs/: archetypes.json  archetypes.yaml
data/: qcrit_sram6t.json  qcrit_sram6t.schema.json  qcrit_sram6t.schema.light.json
docs/: AdoptionPlaybook.md  ESII.md  EnergyModel.md  ImplementationLog.md  LiteratureSurvey.md  ProjectOverview.md  SIGNOFF_CHECKLIST.md  SimulatorOverview.md  TestSummary.md  analysis.md  calibration_signoff_envelope.md  carbon_calibration.md  drift_policy.md  iscas2026_memory_ecc_paper.tex  ml_design.md  ml_scope_implementation_plan.md  output_format_approvals.md  plotting.md
docs/Thesis/: EnergyAwareECC_Framework.tex  IEEE_Manuscript.md  ProblemFormulation.md  SimulationFramework.md
docs/schema/: telemetry.md  telemetry.schema.json
ml/: __init__.py  dataset.py  drift.py  evaluate.py  explain.py  features.py  lifecycle.py  model_registry.py  predict.py  report_card.py  splits.py  sram_advisory.py  train.py
reports/calibration/: METHOD.md  provenance_manifest.json
reports/signoff_inputs/: README.md
scripts/: build_signoff_package.py  run_sku_studies.sh
src/: bch63.cpp  bch63.hpp  energy_loader.cpp  energy_loader.hpp  hamming_sim_configs.hpp  hamming_simulator.hpp  hamming_simulator.tpp
tests/: conftest.py  smoke_test.py  smoke_test.sh  test_artifact_guards.py  test_example_artifacts.py
validation/: __init__.py  output_sanity.py
web/: app.js  datasets.json  index.html  styles.css  tutorial_backend.py  tutorial_cases.json
(+124 files in other folders)
